# Vmch

./: .gitignore  README.md  desktop.ini  package-lock.json  t.txt
Client/: biome.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
Client/src/: App.css  App.tsx  main.tsx  route.ts  routeTree.gen.ts
Client/src-tauri/: Cargo.toml  tauri.conf.json
Client/src-tauri/capabilities/: default.json
Client/src-tauri/icons/: icon.icns
Client/src-tauri/src/: lib.rs
Client/src/GlobalComponents/: Button.tsx
Client/src/Pages/: Home.tsx
Client/src/components/Hero/: Hero.tsx
Client/src/components/Selector/: Selector.tsx
Client/src/components/ThemeSwitch/: ThemeSwitch.tsx
Client/src/icons/: icons.tsx
Client/src/routes/: Home.tsx  __root.ts
DataBase/: db.surql
DataBase/fake_data_gen/: Cargo.toml
DataBase/fake_data_gen/src/: main.rs  model.rs
Server/: Cargo.toml
Server/src/: api.rs  error.rs  main.rs  model.rs  ws.rs
Vmch/: .env.development  .env.production  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
Vmch/public/: splashscreen.html
Vmch/src/: App.css  App.tsx  i18.ts  icons.tsx  main.tsx
Vmch/src-tauri/: Cargo.toml  tauri.conf.json
Vmch/src-tauri/capabilities/: default.json
Vmch/src-tauri/icons/: icon.icns
Vmch/src-tauri/src/: commands.rs  lib.rs  main.rs
Vmch/src/Components/CardNumbers/: CardNumbers.tsx
Vmch/src/Components/Cards/: Cards.tsx
Vmch/src/Components/Counter/: Counter.tsx
Vmch/src/Components/DocCard/: DocCard.tsx
Vmch/src/Components/DotPanel/: DotPanel.tsx
Vmch/src/Components/Header/: Header.tsx
Vmch/src/Components/Hero/: Hero.tsx
Vmch/src/Components/LanguageSelector/: LanguageSelector.tsx
Vmch/src/Components/Loader/: Loader.tsx
Vmch/src/Components/Marquee/: Marquee.tsx
Vmch/src/Components/Selector/: Selector.tsx
Vmch/src/Components/ThemeSwitch/: Switch_Theme.tsx
Vmch/src/Components/Waves/: Waves.tsx
Vmch/src/Components/WobbleCard/: WobbleCard.tsx
Vmch/src/Pages/Category/: Category.tsx
Vmch/src/Pages/Chat/: Chat.css  Chat.tsx
Vmch/src/lib/: utils.ts
client/vmch/: README.md  pubspec.yaml
client/vmch/lib/: main.dart
client/vmch/linux/: CMakeLists.txt  my_application.cc
client/vmch/web/: index.html  manifest.json
client/vmch/windows/: CMakeLists.txt
fast_start/: Cargo.toml
fast_start/src/: main.rs
(+33 files in other folders)
