[package]
name = "Server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.40.0", features = [
    "rt",
    "rt-multi-thread",
    "tokio-macros",
] }
actix-web = "4.9.0"
derive_more = { version = "1", features = ["full"] }
validator = "0.18.1"
regex = "1.11.0"
parking_lot = "0.12.3"
rand = "0.8.5"
itertools = "0.13.0"
chrono = "0.4.38"
hashbrown = "0.15.0"
log = "0.4.22"
actix-files = "0.6.6"
actix-ws = "0.3.0"
env_logger = "0.11.5"
uuid = {version = "1.11.0", features = ["v4"]}


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
panic = "abort"    # Higher performance by disabling panic handlers.
strip = true       # Ensures debug symbols are removed.
incremental = true

[profile.release.package."*"]
opt-level = 3

[profile.dev]
opt-level = 0
debug = 1
overflow-checks = false
lto = "off"
panic = 'abort'
incremental = true
unwind-tables = false
codegen-units = 256
