[package]
name = "vmch"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vmch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = "2.2.2"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tauri-plugin-shell = "2.2.0"
tauri-plugin-websocket = "2.2.0"
tauri-plugin-os = "2"
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
incremental = true

[profile.release.package."*"]
opt-level = 3

[profile.dev]
opt-level = 0
debug = 1
overflow-checks = false
lto = "off"
panic = 'abort'
incremental = true
unwind-tables = false
codegen-units = 256
